# Descent3

./: CMakeLists.txt
2dlib/: CMakeLists.txt  ddgr.h  font.cpp  gr.h  grdefs.h  lib2d.h  memsurf.cpp  pen.cpp  pentext.cpp  screen.cpp  surface.cpp  viewport.cpp
AudioEncode/: CMakeLists.txt  audio_encode.cpp
CMakeModules/: FindSvgalib.cmake
Descent3/: AIGoal.cpp  AImain.cpp  BOA.cpp  Briefing.cpp  BriefingParse.cpp  BriefingParse.h  CMakeLists.txt  Controls.cpp  D3ForceFeedback.cpp  D3ForceFeedback.h  DllWrappers.cpp  DllWrappers.h  Game2DLL.cpp  GameCheat.cpp  GameLoop.cpp  Inventory.cpp  Inventory.h  LoadLevel.cpp  LoadLevel.h  Mission.cpp  NewPyroGauges.cpp  NewPyroGauges.h  OsirisLoadandBind.cpp  PilotPicsAPI.cpp  Player.cpp  SLEW.cpp  SmallViews.cpp  TelCom.cpp  TelCom.h  TelComAutoMap.cpp  TelComCargo.cpp  TelComEffects.cpp  TelComEffects.h  TelComEfxStructs.h  TelComGoals.cpp  WeaponFire.cpp  (+187 more)
module/: CMakeLists.txt  load_curses.cpp  load_curses.h  load_gl.cpp  load_gl.h  load_gl_ryan.h  load_glide2x.cpp  load_glide2x.h  load_glide3x.cpp  load_glide3x.h  load_oxlib.h  load_pthread.cpp  load_pthread.h  load_svgalib.cpp  load_svgalib.h  load_xext.cpp  load_xext.h  load_xwin.cpp  load_xwin.h  module.cpp  module.h  module_macos.cpp  module_unix.cpp  module_win32.cpp
module/glide2x/: glide.h
module/glide3x/: glide.h
ui/: CMakeLists.txt  UIButton.cpp  UICombo.cpp  UIConsole.cpp  UIDraw.cpp  UIEdit.cpp  UIGadget.cpp  UIGroup.cpp  UIHotspot.cpp  UIListBox.cpp  UIObject.cpp  UIRes.cpp  UISlider.cpp  UIStatic.cpp  UISystem.cpp  UIWindow.cpp  ui.h  uilib.h  uires.h
(+586 files in other folders)
